--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 .banner .card {
-    background: #2c2c2c;
+    background: #2c2c2d;
     border: 1px solid #2c2c2c;
     border-radius: 10px;
     box-shadow: 0px 3px 20px 2px #35eea4;
